--- a/svelte/package.json
+++ b/svelte/package.json
@@ -12,35 +12,35 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@types/eslint": "^8.56.0",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.35.1",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "postcss": "8.4.38",
-    "autoprefixer": "10.4.19",
-    "tailwindcss": "3.4.3",
     "@skeletonlabs/skeleton": "2.9.2",
     "@skeletonlabs/tw-plugin": "0.4.0",
-    "vite-plugin-tailwind-purgecss": "0.3.3",
-    "@tailwindcss/typography": "0.5.13",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/kit": "^2.5.27",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@tabler/icons-svelte": "^3.31.0",
     "@tailwindcss/forms": "0.5.7",
+    "@tailwindcss/typography": "0.5.13",
+    "@types/eslint": "^8.56.0",
     "@types/node": "20.12.7",
+    "@types/sql.js": "^1.4.9",
     "@types/web-bluetooth": "^0.0.20",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "autoprefixer": "10.4.19",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.45.1",
+    "postcss": "8.4.38",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.2.6",
+    "svelte": "^5.0.0",
+    "svelte-check": "^4.0.0",
+    "tailwindcss": "3.4.3",
+    "tslib": "^2.4.1",
+    "typescript": "^5.5.0",
+    "vite": "^5.4.4",
     "vite-plugin-mkcert": "^1.17.5",
-    "@tabler/icons-svelte": "^3.2.0",
-    "@types/sql.js": "^1.4.9"
+    "vite-plugin-tailwind-purgecss": "0.3.3"
   },
   "type": "module",
   "dependencies": {
