--- a/svelte/.vscode/settings.json
+++ b/svelte/.vscode/settings.json
@@ -14,7 +14,7 @@
 		"bgDark",
 		"bgDrawer",
 		"bgLight",
-		"blur",
+		"blur-sm",
 		"border",
 		"button",
 		"buttonAction",
@@ -94,10 +94,10 @@
 		"regionSymbol",
 		"regionTab",
 		"regionTrail",
-		"ring",
-		"rounded",
+		"ring-3",
+		"rounded-sm",
 		"select",
-		"shadow",
+		"shadow-sm",
 		"slotDefault",
 		"slotFooter",
 		"slotHeader",
