--- a/svelte/package.json
+++ b/svelte/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tabler/icons-svelte": "^3.31.0",
     "@tailwindcss/forms": "0.5.7",
+    "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/typography": "0.5.13",
     "@types/eslint": "^8.56.0",
     "@types/node": "20.12.7",
@@ -26,7 +27,6 @@
     "@types/web-bluetooth": "^0.0.20",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
-    "autoprefixer": "10.4.19",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.45.1",
@@ -35,7 +35,7 @@
     "prettier-plugin-svelte": "^3.2.6",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
-    "tailwindcss": "3.4.3",
+    "tailwindcss": "4.1.5",
     "tslib": "^2.4.1",
     "typescript": "^5.5.0",
     "vite": "^5.4.4",
