--- a/svelte/package.json
+++ b/svelte/package.json
@@ -19,7 +19,6 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@tabler/icons-svelte": "^3.31.0",
     "@tailwindcss/forms": "0.5.7",
-    "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/typography": "0.5.13",
     "@types/eslint": "^8.56.0",
     "@types/node": "20.12.7",
@@ -30,7 +29,6 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.45.1",
-    "postcss": "8.4.38",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.2.6",
     "svelte": "^5.0.0",
@@ -45,6 +43,7 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "1.6.3",
+    "@tailwindcss/vite": "^4.1.5",
     "sql.js": "^1.10.3"
   },
   "packageManager": "pnpm@10.10.0+sha512.d615db246fe70f25dcfea6d8d73dee782ce23e2245e3c4f6f888249fb568149318637dca73c2c5c8ef2a4ca0d5657fb9567188bfab47f566d1ee6ce987815c39"
